# phonalign

./: .gitignore  README.md  pyproject.toml
examples/en/: utt1.txt
src/phonalign/: __init__.py  acoustic.py  align.py  cli.py  corpus.py  errors.py  g2p.py  qa.py
src/phonalign/writers/: __init__.py  durations.py  manifest.py  textgrid.py  vits.py
tests/: test_align.py  test_corpus.py  test_g2p.py  test_writers.py
